test/fails/bad_generics/tags9.lgl
tag a is vec2;
tag b is vec2;
tag c is b;
tag d is b;
tag e is c;

`u downcast2<`t : vec2, `u : `t>(`t x) {
  `t->`u caster = [[1., 0.], [0., 1.]];
  return caster * x;
}

void main() {
    c cvec = [1., 0.];
    d fail = downcast2dumb<c, d>(cvec);
}